# dcmannotate

./: .coveragerc  .gitignore  README.md  demo.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pythonapp.yml
dcmannotate/: __init__.py  __main__.py  annotations.py  dcmdiff.sh  dcmprint.py  dcmtags.sh  dicomvolume.py  generate_test_series.py  hdicom.dcm.dsr  hdicom.py  main.py  measurements.py  readers.py  sc.py  serialization.py  test_rgb.py  vector.py  visage-dcm.py  visage-notation.txt  visage-read.py  visage-test.py  visage.py  writers.py
dcmannotate/readers/: sc.py  sr.py  visage.py
dcmannotate/templates/: base  ellipse
dcmannotate/templates/tid1500/: arrow.xml  base.xml  ellipse.xml
dcmannotate/templates/visage/: arrow.xml  base.xml  ellipse.xml
dcmannotate/utils/: __init__.py  annotation_format.py  point.py
dcmannotate/writers/: __init__.py  sc.py  sr.py  visage.py
tests/: conftest.py  test_cli.py  test_main.py  test_point.py
tools/: visage-read.py
