[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dcmannotate"
authors = [{name = "Roy Wiggins", email = "roy.wiggins@nyulangone.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "highdicom~=0.12.1",
    "Jinja2~=3.0.3",
    "MarkupSafe~=2.0.1",
    "numpy~=1.19.5",
    "Pillow~=8.4.0",
    "pydicom~=2.2.2",
    "defusedxml~=0.7.1"
]

[project.urls]
Home = "https://github.com/mercure-imaging/dcmannotate"

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html", ".github", ".gitignore", ".vscode", ".coveragerc"]

[project.scripts]
flit = "dcmannotate.__main__:console_entry"

[flake8]
max-line-length = 95
extend-ignore = ["E203"]

[tool.black]
line-length = 95
target-version = ['py36']