[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dcmannotate"
authors = [{name = "Roy Wiggins", email = "roy.wiggins@nyulangone.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        'Intended Audience :: Science/Research',
        'Topic :: Multimedia :: Graphics',
        'Topic :: Scientific/Engineering :: Information Analysis',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Development Status :: 3 - Alpha',
        'Environment :: Console'
        ]
dynamic = ["version", "description"]
dependencies = [
    "highdicom~=0.12.1",
    "Jinja2~=3.0.3",
    "numpy~=1.19",
    "Pillow~=8.4.0",
    "pydicom~=2.2.2",
    "defusedxml~=0.7.1"
]

[project.urls]
Home = "https://github.com/mercure-imaging/dcmannotate"

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html", ".github", ".gitignore", ".vscode", ".coveragerc"]
 
[project.scripts]
dcmannotate = "dcmannotate.__main__:console_entry"

[tool.black]
line-length = 95
target-version = ['py36']
